cmake_minimum_required(VERSION 4.1)
project(leetCode)

set(CMAKE_CXX_STANDARD 26)

add_executable(addTwoNumbers addTwoNumbers.cpp)
add_executable(removeNthNodeFromEndOfList removeNthNodeFromEndOfList.cpp)
add_executable(stringToInteger stringToInteger.cpp)
add_executable(longestSubstringWithoutRepeatingCharacters longestSubstringWithoutRepeatingCharacters.cpp)
add_executable(mergeKSortedLists mergeKSortedLists.cpp)
add_executable(swapNodesInPairs swapNodesInPairs.cpp)
add_executable(removeDuplicatesFromSortedArray removeDuplicatesFromSortedArray.cpp)
add_executable(sudokuSolver sudokuSolver.cpp)
add_executable(palindromeNumber palindromeNumber.cpp)
add_executable(zigZagConversion zigZagConversion.cpp)
add_executable(pow pow.cpp)
